update: IDEA 基础配置笔记